add packages to Java and make the spring boot application

--- a/Project2/TournamentManager/angular.json
+++ b/Project2/TournamentManager/angular.json
@@ -13,8 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../src/main/webapp",
-            "deleteOutputPath": false,
+            "outputPath": "dist/TournamentManager",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
