--- a/Project2/src/main/resources/application.properties
+++ b/Project2/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://coberg-trainingdb.cyeu8paosfnf.us-east-2.rds.amazonaws.com:5432/inClass
 spring.datasource.username=csoberg
 spring.datasource.password=passblurb95$
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
